Init build script

--- a/backup.properties
+++ b/backup.properties
@@ -1,5 +1,10 @@
-src.dir=
-build.dir=
-target.zip.dir=
-target.sum.dir=
-years=
+src.dir=/mnt/photo
+zip.password=qwer1234
+
+split.size=1g
+years=2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014
+date.separator=.
+
+target.tar.dir=/media/work/backups/tar
+target.zip.dir=/media/work/backups/zip
+target.sum.dir=/media/work/backups/sum
